Fix: Overflow Styling

--- a/styles/_main.module.scss
+++ b/styles/_main.module.scss
@@ -2,15 +2,15 @@
 
 .main {
   position: relative;
-  
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  /* height: 100vh; */
+  height: 100vh;
   width: 100vw;
-  /* overflow: auto; */
+  overflow: hidden;
 
   color: $color_100;
   background: $color_800;
